@@ -8,6 +8,7 @@
 
 #define PLEXYPREFIX  "${CMAKE_INSTALL_PREFIX}"
 #define PLEXYLIBDIR "${CMAKE_INSTALL_LIBDIR}"
+#define CK_PLUGIN_PREFIX "${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}/"
 
 #ifndef PLEXYQTIMPORTSDIR
 #define PLEXYQTIMPORTSDIR "${QT_IMPORTS_INSTALL_DIR}"
